[flake8]
# E501: line too long
# W503: line break before binary operator
ignore = E501,W503

[metadata]
name = firefly_astrowidgets
description = Firefly widgets for the Jupyter notebook and JupyterLab
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Firefly Developers
author_email = shupe@ipac.caltech.edu
license = BSD 3-Clause
license_file = LICENSE.rst
edit_on_github = True
github_project = stargaser/firefly_astrowidgets

[options]
package_dir=
    =firefly_astrowidgets
zip_safe = False
packages = find:
install_requires =
    astropy
    ipywidgets>=7.5
    ipyevents>=0.6.3
    jupyterlab>=3
    firefly_client
    jupyter_firefly_extensions
python_requires >=3.8

[options.packages.find]
where=firefly_astrowidgets
